_sass/jekyll-theme-cs50.scss
// Default font
$font-family-sans-serif: "PT Sans" !default;

// Crimson links
$link-color: #a51c30 !default;
$link-hover-color: $link-color !default;

// Import Bootstrap
@import "node_modules/bootstrap/scss/bootstrap.scss";

// Import build of primer-markdown after renaming build.css to build.scss via package.json so that we can import, per
// https://stackoverflow.com/questions/7111610/import-regular-css-file-in-scss-file/36166487#36166487
@import "node_modules/primer-markdown/build/build.scss";

// Import Google Fonts
@import url("https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700");

// Root em
html {
    font-size: 18px;
}

// Defaults for iframes
iframe {
    border: 0;
    height: 480px;
}

// Ensure responsive in Safari on iOS (for, e.g., Google Calendars), per 
// https://stackoverflow.com/a/23083463/5156190
iframe {
    min-width: 100%;
    width: 1px;
}

// Confine images to parent
img {
    max-width: 100%;
}

// Confine borders to images
.img-thumbnail {
    width: fit-content;
}

// Crimson background, transparent text
aside {
    background-color: $link-color;
    color: rgba(255, 255, 255, 0.5);
    font-size: 1.125rem;
}

// Override column's padding
aside.col-md {
    padding: 2rem 2rem;
}

// Fixed width, scroll on larger devices
@include media-breakpoint-up(md) {
    aside.col-md {
        flex: 0 1 20rem;
        @supports (position: sticky) {
            height: 100vh;
            overflow-y: auto;
            position: sticky;
            top: 0;
            z-index: $zindex-sticky;
        }
    }
}

// Align badges
aside .badge {
    vertical-align: middle;
}

// Bold headings
aside h1, 
aside h2, 
aside h3, 
aside h4, 
aside h5, 
aside h6 {
    font-weight: bold;
}

// Opaque text
aside a,
aside a:hover,
aside button[data-toggle=collapse],
aside button[data-toggle=collapse]:hover {
    background-color: inherit;
    border-color: rgba(255, 255, 255, .5);
    color: rgba(255, 255, 255, 1);
}

// Opaque border
aside button[data-toggle=collapse]:hover {
    border-color: rgba(255, 255, 255, 1);
}

// Invert colors when not collapsed
aside button[data-toggle=collapse]:not(.collapsed) {
    background-color: rgba(255, 255, 255, 1);
    color: $link-color;
}

// Compact small paragraphs
aside p.small {
    line-height: 1.25;
}

// Separate nav button (or header) and footer, applying margins to children to avoid flicker when uncollapsing
nav > *:first-child {
    margin-top: 1rem;
}

// Mimic Primer
header *:last-child,
nav *:last-child,
footer *:last-child {
    margin-bottom: 0;
}

// Separate button from header and nav
aside button[data-toggle=collapse] {
    margin-top: 1rem;
}

// Truncate list items
nav ol li, nav ul li {
    @include text-truncate;
}

// Left-align unordered lists, without bullets
nav ul {
    list-style: none;
    padding-left: 0;
}

// Preserve bullets for nested unordered lists
nav ul ul {
    list-style: inside;
}

// Left-align ordered lists
nav ol {
    list-style-position: inside;
    padding-left: 0;
}

// Separate footer from nav unless empty
footer {
    margin-top: 1rem;
}
footer:empty {
    margin-top: 0;
}

// Override column's padding, width
main.col-md {
    max-width: 80rem;
    padding: 4rem 2rem;
}

// Override Primer's family and size for fonts
.markdown-body {
    font-family: inherit; /* Use our family */
    font-size: inherit; /* Use our size */
}

// Add padding above headings to match Primer's padding below headings,
// to ensure anchors aren't too close to top of viewport
.markdown-body h1,
.markdown-body h2,
.markdown-body h3,
.markdown-body h4,
.markdown-body h5,
.markdown-body h6 {
    margin-top: 0;
    padding-top: 16px;
}

// Mute emphasized text in headings
.markdown-body h1 > em,
.markdown-body h2 > em,
.markdown-body h3 > em,
.markdown-body h4 > em,
.markdown-body h5 > em,
.markdown-body h6 > em {
    @extend .font-weight-normal;
    @extend .text-muted;
    font-style: normal;
}

// Subtle anchors in headings 
.markdown-body h2 a[data-id],
.markdown-body h3 a[data-id],
.markdown-body h4 a[data-id],
.markdown-body h5 a[data-id],
.markdown-body h6 a[data-id] {
    color: inherit;
    text-decoration: none;
}

// Fix inconsistency in Primer
// https://github.com/primer/primer/pull/563
.markdown-body ol > li:first-child,
.markdown-body ul > li:first-child {
    margin-top: .25em;   
}

// Mimic li's margin-top
.markdown-body li > blockquote,
.markdown-body li > div > div.highlight,
.markdown-body li > img,
.markdown-body li > pre {
    margin-top: .25em;
}

// Mimic li's margin-bottom, not p's margin-bottom
.markdown-body li > div > div.highlight {
    margin-bottom: 0;
}

// Mimic h1's bottom border
.markdown-body hr {
    background-color: #eaecef;
    height: 1px;
    margin: 16px 0;
}

// Mimic p
.markdown-body .embed-responsive {
    margin-bottom: 16px;
    margin-top: 0;
}

// Condense TOC
#markdown-toc li + li,
#markdown-toc ol > li:first-child,
#markdown-toc ul > li:first-child {
    margin-top: 0;
}

// On small devices and printers
// https://getbootstrap.com/docs/4.2/layout/overview/#responsive-breakpoints
@media (max-width: 767.98px), print {

    // Root em
    html {
        font-size: 16px;
    }

    // Don't shrink fonts as much
    small, .small {
        font-size: 90%;
    }
}

// Also on printers
@media print {

    // Hide button above nav
    aside button[data-toggle=collapse] {
        display: none;
    }

    // Only show header
    nav.collapse:not(.show), footer {
        display: none;
    }

    // Display links' URLs
    a[href^='http']:after {
        content: ' (' attr(href) ')';
        word-wrap: break-word;
    }
}

// GitHub syntax highlighter color scheme for Pygments
// https://github.com/PhilipTrauner/pygments-github-css/blob/master/github.css
.highlight .hll { background-color: #ffffcc }
.highlight  { background: #f8f8f8; }
.highlight .c { color: #6a737d } /* Comment */
.highlight .err {  } /* Error */
.highlight .k { color: #d73a49 } /* Keyword */
.highlight .o { } /* Operator */
.highlight .ch { color: #6a737d } /* Comment.Hashbang */
.highlight .cm { color: #6a737d } /* Comment.Multiline */
.highlight .cp { color: #d73a49 } /* Comment.Preproc */
.highlight .cpf { color: #032f62 } /* Comment.PreprocFile */
.highlight .c1 { color: #6a737d } /* Comment.Single */
.highlight .cs { color: #6a737d } /* Comment.Special */
.highlight .gd { color: #b31d28; background-color: #ffeef0 } /* Generic.Deleted */
.highlight .ge {  } /* Generic.Emph */
.highlight .gr {  } /* Generic.Error */
.highlight .gh { color: #005cc5 } /* Generic.Heading */
.highlight .gi { color: #22863a; background-color: #f0fff4 } /* Generic.Inserted */
.highlight .go {  } /* Generic.Output */
.highlight .gp {  } /* Generic.Prompt */
.highlight .gs { font-weight: bold } /* Generic.Strong */
.highlight .gu { color: #6f42c1; font-weight: bold } /* Generic.Subheading */
.highlight .gt { color: #0044DD } /* Generic.Traceback */
.highlight .kc { color: #005cc5 } /* Keyword.Constant */
.highlight .kd { color: #d73a49 } /* Keyword.Declaration */
.highlight .kn { color: #d73a49 } /* Keyword.Namespace */
.highlight .kp { color: #d73a49 } /* Keyword.Pseudo */
.highlight .kr { color: #d73a49 } /* Keyword.Reserved */
.highlight .kt { color: #d73a49 } /* Keyword.Type */
.highlight .m { color: #666666 } /* Literal.Number */
.highlight .s { color: #032f62 } /* Literal.String */
.highlight .na { } /* Name.Attribute */
.highlight .nb { color: #005cc5 } /* Name.Builtin */
.highlight .nc { color: #6f42c1 } /* Name.Class */
.highlight .no { color: #005cc5 } /* Name.Constant */
.highlight .nd { color: #6f42c1 } /* Name.Decorator */
.highlight .ni { color: #005cc5 } /* Name.Entity */
.highlight .ne { color: #005cc5 } /* Name.Exception */
.highlight .nf { color: #6f42c1 } /* Name.Function */
.highlight .nl { color: #005cc5 } /* Name.Label */
.highlight .nn { color: #6f42c1 } /* Name.Namespace */
.highlight .nt { color: #22863a } /* Name.Tag */
.highlight .nv { color: #24292e } /* Name.Variable */
.highlight .ow { color: #d73a49; } /* Operator.Word */
.highlight .w { color: #bbbbbb } /* Text.Whitespace */
.highlight .mb { color: #005cc5 } /* Literal.Number.Bin */
.highlight .mf { color: #005cc5 } /* Literal.Number.Float */
.highlight .mh { color: #005cc5 } /* Literal.Number.Hex */
.highlight .mi { color: #005cc5 } /* Literal.Number.Integer */
.highlight .mo { color: #005cc5 } /* Literal.Number.Oct */
.highlight .sa { color: #d73a49 } /* Literal.String.Affix */
.highlight .sb { color: #032f62 } /* Literal.String.Backtick */
.highlight .sc { color: #032f62 } /* Literal.String.Char */
.highlight .dl { color: #d73a49 } /* Literal.String.Delimiter */
.highlight .sd { color: #032f62 } /* Literal.String.Doc */
.highlight .s2 { color: #032f62 } /* Literal.String.Double */
.highlight .se { color: #032f62 } /* Literal.String.Escape */
.highlight .sh { color: #032f62 } /* Literal.String.Heredoc */
.highlight .si { color: #005cc5 } /* Literal.String.Interpol */
.highlight .sx { color: #032f62 } /* Literal.String.Other */
.highlight .sr { color: #032f62 } /* Literal.String.Regex */
.highlight .s1 { color: #032f62 } /* Literal.String.Single */
.highlight .ss { color: #005cc5 } /* Literal.String.Symbol */
.highlight .bp { color: #005cc5 } /* Name.Builtin.Pseudo */
.highlight .fm { color: #005cc5 } /* Name.Function.Magic */
.highlight .vc { color: #24292e } /* Name.Variable.Class */
.highlight .vg { color: #24292e } /* Name.Variable.Global */
.highlight .vi { color: #24292e } /* Name.Variable.Instance */
.highlight .vm { color: #005cc5 } /* Name.Variable.Magic */
.highlight .il { color: #005cc5 } /* Literal.Number.Integer.Long */

